--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,15 +1,15 @@
 <header>
   <section id="menu" class="small-12 columns">
-		<div class="expanded small-collapse large-uncollapse">
+		<div class="expanded small-collapse medium-uncollapse">
 			<!-- Hamburger button -->
-			<div class="title-bar" data-responsive-toggle="2chainz-menu" data-hide-for="large">
+			<div class="title-bar" data-responsive-toggle="2chainz-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle="2chainz-menu"></button>
 				<div class="title-bar-title">2 CHAINZ</div> <!-- Name aside hamburger button -->
 			</div>
 			<div class="row">
-				<div id="2chainz-menu" class="menu float-left vertical large-horizontal small-12 columns">
+				<div id="2chainz-menu" class="float-left vertical medium-horizontal small-12 columns">
 					<!-- Navigation -->
-					<nav class="small-12 large-4 columns">
+					<nav class="small-12 medium-5 large-4 columns">
 						<a class="active" href="#">News</a>
 						<a href="#">Music</a>
 						<a href="#">Video</a>
@@ -17,11 +17,11 @@
 						<a href="#">Store</a>
 					</nav>
 					<!-- Artist name -->
-				  <div class="small-12 large-4 columns">
+				  <div class="small-12 medium-2 large-4 columns">
 						<h1>2 Chainz</h1>
 					</div>
 					<!-- Social media -->
-					<div id="social" class="small-12 large-4 columns">
+					<div id="social" class="small-12 medium-5 large-4 columns">
 						<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
 						<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
 						<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
@@ -29,7 +29,7 @@
 						<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
 						<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
 						<!-- Login -->
-						<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login</a>
+						<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login </a>
 					</div>
 				</div>
 		  </div>
@@ -52,35 +52,41 @@
 
 <section id="new-album" class="row">
   <figure class="small-12 large-4 columns">
+		<figcaption>
+			<h3>New Album</h3>
+			<h4>Pretty Girls Like Trap Music</h4>
+		</figcaption>
 		<!-- Image -->
 		<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
   </figure>
   <div class="small-12 large-8 columns">
 		<!-- Title -->
-		<h3>New Album</h3>
-		<h4>Pretty Girls Like Trap Music</h4>
-	<!-- Buttons -->
-	<div id="new-album-buttons" class="small-12 columns">
-		<input class="button" type="button" value="Spotify">
-		<input class="button" type="button" value="iTunes">
-		<input class="button" type="button" value="Google Play">
-		<input class="button" type="button" value="Amazon Music">
-	</div>
-	<!-- Tracks -->
-	<span class="small-12 large-6 columns">
-		<li><input class="number" type="button" value="1"> Good Drank - 2 Chainz, Gucci Mane, Quavo </li>
-		<li><input class="number" type="button" value="2"> Champions - Kayne West, Gucci Mabne, Big Sean </li>
-		<li><input class="number" type="button" value="3"> Watch Out - 2 Chainz </li>
-		<li><input class="number" type="button" value="4"> It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz </li>
-		<li><input class="number" type="button" value="5"> Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo </li>
-	</span>
-	<span class="small-12 large-6 columns">
-		<li><input class="number" type="button" value="6"> We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa </li>
-		<li><input class="number" type="button" value="7"> Big Amount - 2 Chainz </li>
-		<li><input class="number" type="button" value="8"> Smartphone - 2 Chainz </li>
-		<li><input class="number" type="button" value="9"> El Chapo Jr - 2 Chainz </li>
-		<li><input class="number" type="button" value="10"> I'm Diferent - 2 Chainz </li>
-	</span>
+		<div class="new-album-titles">
+			<h3>New Album</h3>
+			<h4>Pretty Girls Like Trap Music</h4>
+		</div>
+		<!-- Buttons -->
+		<div id="new-album-buttons" class="small-12 columns">
+			<input class="button" type="button" value="Spotify">
+			<input class="button" type="button" value="iTunes">
+			<input class="button" type="button" value="Google Play">
+			<input class="button" type="button" value="Amazon Music">
+		</div>
+		<!-- Track List -->
+		<span class="small-12 medium-6 columns">
+			<li><input class="number" type="button" value="1"> Good Drank - 2 Chainz, Gucci Mane, Quavo </li>
+			<li><input class="number" type="button" value="2"> Champions - Kayne West, Gucci Mabne, Big Sean </li>
+			<li><input class="number" type="button" value="3"> Watch Out - 2 Chainz </li>
+			<li><input class="number" type="button" value="4"> It's a Vibe - 2 Chainz, Ty Dolla $ign, Trey Songz </li>
+			<li><input class="number" type="button" value="5"> Good Drank 2.0 - 2 Chainz, Gucci Mane, Quavo </li>
+		</span>
+		<span class="small-12 medium-6 columns">
+			<li><input class="number" type="button" value="6"> We Own It (Fast & Furious) - 2 Chainz, Wiz Khalifa </li>
+			<li><input class="number" type="button" value="7"> Big Amount - 2 Chainz </li>
+			<li><input class="number" type="button" value="8"> Smartphone - 2 Chainz </li>
+			<li><input class="number" type="button" value="9"> El Chapo Jr - 2 Chainz </li>
+			<li><input class="number" type="button" value="10"> I'm Diferent - 2 Chainz </li>
+		</span>
   </div>
 </section><!-- End of new album section -->
 
@@ -149,7 +155,7 @@
 		  <!-- Tour details #1 -->
 			<li>
 				<span class="date">
-					<span class="yellow-date">Apr</span><br>14
+					<span class="yellow-date">Apr</span>14
 				</span>
 			  <span class="location">Cristler Center</span>
 				<span class="state">Ann Arbor, MI</span>
@@ -160,7 +166,7 @@
 			<!-- Tour details #2 -->
 			<li>
 				<span class="date">
-					<span class="yellow-date">Apr</span><br>19
+					<span class="yellow-date">Apr</span>19
 				</span>
 				<span class="location">Lost Lakes Ampitheatre</span>
 				<span class="state">Oklahoma City, OK</span>
@@ -171,7 +177,7 @@
 			<!-- Tour details #3 -->
 			<li>
 				<span class="date">
-					<span class="yellow-date">Apr</span><br>22
+					<span class="yellow-date">Apr</span>22
 				</span>
 				<span class="location">Pozo Saloon</span>
 				<span class="state">Santa Margarita, CA</span>
@@ -182,7 +188,7 @@
 			<!-- Tour details #4 -->
 			<li>
 				<span class="date">
-					<span class="yellow-date">Apr</span><br>23
+					<span class="yellow-date">Apr</span>23
 				</span>
 				<span class="location">Mullins Center</span>
 				<span class="state">Amherst, MA</span>
@@ -193,7 +199,7 @@
 			<!-- Tour details #5 -->
 			<li>
 				<span class="date">
-					<span class="yellow-date">Apr</span><br>28
+					<span class="yellow-date">Apr</span>28
 				</span>
 				<span class="location">Liacouras Center</span>
 				<span class="state">Philadelphia, PA</span>
