--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,52 +1,47 @@
-<header>
+<header class="row small-12 columns">
   <section id="menu" class="small-12 columns">
-		<div class="expanded small-collapse medium-uncollapse">
-			<!-- Hamburger button -->
-			<div class="title-bar" data-responsive-toggle="2chainz-menu" data-hide-for="medium">
-				<button class="menu-icon" type="button" data-toggle="2chainz-menu"></button>
-				<div class="title-bar-title">2 CHAINZ</div> <!-- Name aside hamburger button -->
-			</div>
-			<div class="row">
-				<div id="2chainz-menu" class="float-left vertical medium-horizontal small-12 columns">
-					<!-- Navigation -->
-					<nav class="small-12 medium-5 large-4 columns">
-						<a class="active" href="#">News</a>
-						<a href="#">Music</a>
-						<a href="#">Video</a>
-						<a href="#">Photos</a>
-						<a href="#">Store</a>
-					</nav>
-					<!-- Artist name -->
-				  <div class="small-12 medium-2 large-4 columns">
-						<h1>2 Chainz</h1>
-					</div>
-					<!-- Social media -->
-					<div id="social" class="small-12 medium-5 large-4 columns">
-						<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
-						<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
-						<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
-						<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
-						<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
-						<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
-						<!-- Login -->
-						<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login </a>
-					</div>
-				</div>
-		  </div>
+	<div class="expanded small-collapse medium-uncollapse small-12 columns">
+		<!-- Hamburger button -->
+		<div class="title-bar small-12 columns" data-responsive-toggle="2chainz-menu" data-hide-for="medium">
+		  <button class="menu-icon" type="button" data-toggle="2chainz-menu"></button>
+		  <div class="title-bar-title">2 CHAINZ</div> <!-- Name aside hamburger button -->
 		</div>
+		<!-- Navigation -->
+		<div id="2chainz-menu" class="float-left vertical medium-horizontal small-12 columns">
+			<nav class="small-12 medium-5 large-4 columns">
+				<a class="active" href="#">News</a>
+				<a href="#">Music</a>
+				<a href="#">Video</a>
+				<a href="#">Photos</a>
+				<a href="#">Store</a>
+			</nav>
+		<!-- Artist name -->
+		<div class="small-12 medium-2 large-4 columns">
+			<h1>2 Chainz</h1>
+		</div>
+		<!-- Social media -->
+		<div id="social" class="small-12 medium-5 large-4 columns">
+			<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
+			<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
+			<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
+			<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
+			<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
+			<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
+			<!-- Login -->
+			<a href="#"><img alt="Login" src="../assets/img/image-7.png"> Login </a>
+		</div>	
+	  </div>
+	</div>
   </section><!-- End of menu section -->
 
-  <section id="slideshow">
+  <section id="slideshow" class="small-12 columns">
 	<!-- Slideshow -->
 	<img class="slideshow-image" alt="2 Chainz" src="../assets/img/image-8.jpg">
 	<!-- Title -->
-	<h2>Pretty Girls Like Trap Music</h2>
-	<!-- 
-	TO DO: 
-	On click, add a smooth scroll animation 
-	that scrolls the user to New Album section. 
-	-->
-	<input type="button" value="Listen Now">
+	<div id="main-title">
+		<h2>Pretty Girls<br/>Like Trap Music</h2>
+		<input id="scroll-down-btn" type="button" value="Listen Now">
+	</div>
   </section><!-- End of slideshow section -->
 </header><!-- End of header -->
 
