Adding Newsletter and Footer

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -205,3 +205,27 @@
 		</div>
 	</div>
 </section><!-- End of tour dates section -->
+
+<section id="newsletter" class="row">
+	<h3 class="small-12 columns">Newsletter</h3>
+</section><!-- End of newsletter section -->
+
+<footer class="row">
+	<div class="small-12 medium-12 large-3 columns">
+		<p>&copy; Def Jam Records</p>
+	</div>
+	<div class="small-12 medium-6 large-3 columns">
+		<a href="#">Terms & Conditions</a>
+	</div>
+	<div class="small-12 medium-6 large-3 columns">
+		<a href="#">Privacy Policy</a>
+	</div>
+	<div class="small-12 medium-12 large-3 columns">
+		<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
+		<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
+		<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
+		<a href="#"><img class="social-media" alt="YouTube" src="../assets/img/image-4.png"></a>
+		<a href="#"><img class="social-media" alt="SoundCloud" src="../assets/img/image-5.png"></a>
+		<a href="#"><img class="social-media" alt="E-mail" src="../assets/img/image-6.png"></a>
+	</div>
+</footer><!-- End of footer -->
