--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -93,7 +93,7 @@
 			<figure>
 				<img class="bigger-image" alt="News 1" src="../assets/img/image-10.jpg">
 			</figure>
-			<figcaption>
+			<figcaption class="bigger-image">
 				<p>Watch 2 Chainz & Lil Wayne's New Video "Bounce"<br/>
 					<a href="#">Read More</a>
 				</p>
@@ -104,7 +104,7 @@
 			<figure>
 				<img class="smaller-image" alt="News 2" src="../assets/img/image-11.jpg">
 			</figure>
-			<figcaption>
+			<figcaption class="smaller-image">
 				<p>Get the dabbin this holiday season & purchase the...</p>
 			</figcaption>
 		</article>
@@ -113,7 +113,7 @@
 			<figure>
 				<img class="smaller-image" alt="News 3" src="../assets/img/image-12.jpg">
 			</figure>
-			<figcaption>
+			<figcaption class="smaller-image">
 				<p>2 Chainz performing live at hempcon Nov. 7th</p>
 			</figcaption>
 		</article>
@@ -122,7 +122,7 @@
 			<figure>
 				<img class="smaller-image" alt="News 4" src="../assets/img/image-13.jpg">
 			</figure>
-			<figcaption>
+			<figcaption class="smaller-image">
 				<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
 			</figcaption>
 		</article>
@@ -131,7 +131,7 @@
 			<figure>
 				<img class="smaller-image" alt="News 5" src="../assets/img/image-14.jpg">
 			</figure>
-			<figcaption>
+			<figcaption class="smaller-image">
 				<p>GQ's most expensivest shit: 2 Chainz buys $14K Chair?</p>
 			</figcaption>
 		</article>
