Improving the responsive design.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,6 +21,7 @@
 		</div>
 		<!-- Social media -->
 		<div id="social" class="small-12 medium-5 large-4 columns">
+			<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
 			<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
 			<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
 			<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
@@ -208,6 +209,19 @@
 
 <section id="newsletter" class="row">
 	<h3 class="small-12 columns">Newsletter</h3>
+	<form>
+	  <input class="newsletter-field" type="text" name="E-mail" placeholder="Email Address *" required>
+	  <input class="newsletter-field" type="text" name="E-mail" placeholder="Zip Code *" required>
+	  	<h5>Subscribe to email updates from:</h5>
+		  <input id="checkbox-2chainz" type="checkbox" name="2Chainz">
+		  	<label>2 Chainz</label>
+		  <input id="checkbox-defjam" type="checkbox" name="DefJamRecords">
+		  	<label>Def Jam Records</label>
+		  <input id="checkbox-universal" type="checkbox" name="UniversalMusicGroup">
+			<label>Universal Music Group</label>
+		<p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
+	</form>
+
 </section><!-- End of newsletter section -->
 
 <footer class="row">
@@ -221,6 +235,7 @@
 		<a href="#">Privacy Policy</a>
 	</div>
 	<div class="small-12 medium-12 large-3 columns">
+		<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
 		<a href="#"><img class="social-media" alt="Instagram" src="../assets/img/image-1.png"></a>
 		<a href="#"><img class="social-media" alt="Spotify" src="../assets/img/image-2.png"></a>
 		<a href="#"><img class="social-media" alt="Twitter" src="../assets/img/image-3.png"></a>
