--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -210,24 +210,33 @@
 <section id="newsletter" class="row">
   <div class="small-12 columns">
 	<h3>Newsletter</h3>
-	<form class="row">
-	  <!-- Input text fiels for E-mail and Zip Code -->
-	  <input class="newsletter-field small-12 medium-6 columns" 
-	  	type="text" name="E-mail" placeholder="Email Address *" required>
-	  <input class="newsletter-field small-12 medium-6 columns" 
-	  	type="text" name="E-mail" placeholder="Zip Code *" required>
+	<form class="row form-wrapper">
+	  <!-- Input text fiels for E-mail address and ZIP Code -->
+	  <div class="newsletter-wrapper small-12 columns">
+		<input class="newsletter-field small-12 medium-6 columns" 
+		  type="email" name="E-mail" placeholder="EMAIL ADDRESS *" required>
+		<!-- I used Regex for the ZIP code pattern. -->
+		<input class="newsletter-field small-12 medium-6 columns" 
+		  type="text" pattern="(\d{5}([\-]\d{4})?)" name="ZIP Code" placeholder="ZIP CODE *" required>
+	  </div>
 	  <h5 class="small-12 columns">Subscribe to email updates from:</h5>
 	    <!-- Checkboxes -->
 		<div class="small-12 columns">
-		  <input id="checkbox-1" type="checkbox" name="2Chainz">
-		  	<label class="checkbox-label">2 Chainz</label>
-		  <input id="checkbox-2" type="checkbox" name="DefJamRecords">
-		  	<label class="checkbox-label">Def Jam Records</label>
-		  <input id="checkbox-3" type="checkbox" name="UniversalMusicGroup">
+		  <span class="small-12 medium-4 columns check-list">
+		    <input id="checkbox-1" type="checkbox" name="2Chainz">
+			<label class="checkbox-label">2 Chainz</label>
+		  </span>
+		  <span class="small-12 medium-4 columns check-list">
+		    <input id="checkbox-2" type="checkbox" name="DefJamRecords">
+			<label class="checkbox-label">Def Jam Records</label>
+		  </span>
+		  <span class="small-12 medium-4 columns check-list">
+		    <input id="checkbox-3" type="checkbox" name="UniversalMusicGroup">
 			<label class="checkbox-label">Universal Music Group</label>
+		  </span>
 		</div>
 		<!-- Form submission -->
-		<div class="small-12 columns">
+		<div class="submission small-12 columns">
 		  <p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
 		  <input id="submit-form" type="submit" value="Submit">
 		</div>
