--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,13 @@
 <header class="row small-12 columns">
   <section id="menu" class="small-12 columns">
 	<div class="expanded small-collapse medium-uncollapse small-12 columns">
+
 		<!-- Hamburger button -->
 		<div class="title-bar small-12 columns" data-responsive-toggle="2chainz-menu" data-hide-for="medium">
 		  <button class="menu-icon" type="button" data-toggle="2chainz-menu"></button>
 		  <div class="title-bar-title">2 CHAINZ</div> <!-- Name aside hamburger button -->
 		</div>
+
 		<!-- Navigation -->
 		<div id="2chainz-menu" class="float-left vertical medium-horizontal small-12 columns">
 			<nav class="small-12 medium-5 large-4 columns">
@@ -15,10 +17,12 @@
 				<a href="#">Photos</a>
 				<a href="#">Store</a>
 			</nav>
+
 		<!-- Artist name -->
 		<div class="small-12 medium-2 large-4 columns">
 			<h1>2 Chainz</h1>
 		</div>
+
 		<!-- Social media -->
 		<div id="social" class="small-12 medium-5 large-4 columns">
 			<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
@@ -52,15 +56,18 @@
 			<h3>New Album</h3>
 			<h4>Pretty Girls Like Trap Music</h4>
 		</figcaption>
+
 		<!-- Image -->
 		<img class="new-album-image" alt="2 Chainz" src="../assets/img/image-9.jpg">
   </figure>
   <div class="small-12 large-8 columns">
+
 		<!-- Title -->
 		<div class="new-album-titles">
 			<h3>New Album</h3>
 			<h4>Pretty Girls Like Trap Music</h4>
 		</div>
+
 		<!-- Buttons -->
 		<div id="new-album-buttons" class="small-12 columns">
 			<input class="button" type="button" value="Spotify">
@@ -68,6 +75,7 @@
 			<input class="button" type="button" value="Google Play">
 			<input class="button" type="button" value="Amazon Music">
 		</div>
+
 		<!-- Track List -->
 		<span class="small-12 medium-6 columns">
 			<li><input class="number" type="button" value="1"> Good Drank - 2 Chainz, Gucci Mane, Quavo </li>
@@ -89,6 +97,7 @@
 <section id="news" class="row">
 	<h3 class="small-12 columns">News</h3>
 	<div class="small-12 columns row">
+
 		<!-- News #1 (Bigger) -->
 		<article class="small-12 large-6 columns">
 			<figure>
@@ -100,6 +109,7 @@
 				</p>
 			</figcaption>
 		</article>
+
 		<!-- News #2 -->
 		<article class="small-6 large-3 columns">
 			<figure>
@@ -109,6 +119,7 @@
 				<p>Get the dabbin this holiday season & purchase the...</p>
 			</figcaption>
 		</article>
+
 		<!-- News #3 -->
 		<article class="small-6 large-3 columns">
 			<figure>
@@ -118,6 +129,7 @@
 				<p>2 Chainz performing live at hempcon Nov. 7th</p>
 			</figcaption>
 		</article>
+
 		<!-- News #4 -->
 		<article class="small-6 large-3 columns">
 			<figure>
@@ -127,6 +139,7 @@
 				<p>Watch out! 2 Chainz premieres new music on 1st annual bet...</p>
 			</figcaption>
 		</article>
+
 		<!-- News #5 -->
 		<article class="small-6 large-3 columns">
 			<figure>
@@ -137,18 +150,21 @@
 			</figcaption>
 		</article>
 	</div>
+
 	<!-- View More button -->
 	<div class="view-more small-12 columns">
-		<input class="button" type="button" value="View More">
+      <input class="button" type="button" value="View More">
 	</div>
 </section><!-- End of news section -->
 
 <section id="tour-dates" class="row">
 	<img class="bg-image" alt="Background" src="../assets/img/image-15.jpg">
-	<div class="tour-box">
-		<div class="small-12 columns">
-			<h3 class="small-12 columns">Tour Dates</h3>
-		  <!-- Tour details #1 -->
+	<div class="tour-box small-12 columns">
+		<div class="small-12 large-3 columns"></div>
+		<div class="small-12 large-9 columns">
+			<h3>Tour Dates</h3>
+			  
+			<!-- Tour details #1 -->
 			<li>
 				<span class="date">
 					<span class="yellow-date">Apr</span>14
@@ -159,6 +175,7 @@
 					<input class="button" type="button" value="Tickets">
 				</span>
 			</li>
+			
 			<!-- Tour details #2 -->
 			<li>
 				<span class="date">
@@ -170,6 +187,7 @@
 					<input class="button" type="button" value="Tickets">
 				</span>
 			</li>
+			
 			<!-- Tour details #3 -->
 			<li>
 				<span class="date">
@@ -181,6 +199,7 @@
 					<input class="button" type="button" value="Tickets">
 				</span>
 			</li>
+			
 			<!-- Tour details #4 -->
 			<li>
 				<span class="date">
@@ -192,6 +211,7 @@
 					<input class="button" type="button" value="Tickets">
 				</span>
 			</li>
+			
 			<!-- Tour details #5 -->
 			<li>
 				<span class="date">
@@ -211,15 +231,17 @@
   <div class="small-12 columns">
 	<h3>Newsletter</h3>
 	<form class="row form-wrapper">
-	  <!-- Input text fiels for E-mail address and ZIP Code -->
 	  <div class="newsletter-wrapper small-12 columns">
-		<input class="newsletter-field small-12 medium-6 columns" 
+	      <!-- Input text fiels for E-mail address and ZIP Code -->
+		  <input class="newsletter-field small-12 medium-6 columns" 
 		  type="email" name="E-mail" placeholder="EMAIL ADDRESS *" required>
-		<!-- I used Regex for the ZIP code pattern. -->
-		<input class="newsletter-field small-12 medium-6 columns" 
+
+	      <!-- I used Regex for the ZIP code pattern. -->
+		  <input class="newsletter-field small-12 medium-6 columns" 
 		  type="text" pattern="(\d{5}([\-]\d{4})?)" name="ZIP Code" placeholder="ZIP CODE *" required>
 	  </div>
-	  <h5 class="small-12 columns">Subscribe to email updates from:</h5>
+	  
+	<h5 class="small-12 columns">Subscribe to email updates from:</h5>
 	    <!-- Checkboxes -->
 		<div class="small-12 columns">
 		  <span class="small-12 medium-4 columns check-list">
@@ -235,6 +257,7 @@
 			<label class="checkbox-label">Universal Music Group</label>
 		  </span>
 		</div>
+
 		<!-- Form submission -->
 		<div class="submission small-12 columns">
 		  <p>My selecting submit you agree to the Universal Music Group privacy policy.</p>  
@@ -249,6 +272,7 @@
 	<div class="small-12 medium-12 large-3 columns">
 		<p>&copy; Def Jam Records</p>
 	</div>
+
 	<!-- Footer links -->
 	<div class="small-12 medium-6 large-3 columns">
 		<a href="#">Terms & Conditions</a>
@@ -256,6 +280,7 @@
 	<div class="small-12 medium-6 large-3 columns">
 		<a href="#">Privacy Policy</a>
 	</div>
+	
 	<!-- Social media -->
 	<div class="small-12 medium-12 large-3 columns">
 		<a href="#"><img class="social-media" alt="Facebook" src="../assets/img/image-0.png"></a>
